# libindexfn

./: Cargo.toml
src/: error.rs  index.rs  indexer.rs  lib.rs  lookup.rs  names.rs  scored_lookup.rs  storage.rs
src/indexer/: hashtable_indexer.rs
src/storage/: fs.rs
