[package]
name = "libindexfn"
version = "0.1.0"
authors = ["Simon Friedmann <simonf256@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
temp_testdir = "^0.2"
tokio-test = "^0.2"

[dependencies]
async-trait = "^0.1"
futures = "0.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "0.2", features = ["full"] }
